--- a/InterestRatesTest.Test/InterestRatesTest.Test.csproj
+++ b/InterestRatesTest.Test/InterestRatesTest.Test.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\InterestRatesTest\InterestRatesTest.csproj" />
+  </ItemGroup>
+
 </Project>
